# legendary-lamp

./: CMakeLists.txt  Distribution.cpp  Distribution.h  README.md  SpaceTransform.cpp  SpaceTransform.h  SpellCorrector.cpp  SpellCorrector.h  Transform.cpp  Transform.h  addXY  delXY  main.cpp  revXY  subXY
distributions/: corpus_distributions.h  distribution.h
parsers/: advanced_parser.h  dictionary_parser.h  trie.h
transforms/: SpaceTransform.cpp  SpaceTransform.h  Transform.cpp  Transform.h  deletion_transform.h  insertion_transform.h  reversal_transform.h  spell_check.h  substitute_transform.h
utils/: utils.h
